fix: Dark mode deleted

--- a/frontend/src/pages/Client.css
+++ b/frontend/src/pages/Client.css
@@ -22,14 +22,6 @@
   width: 100%;
 }
 
-.client-table {
-  border-collapse: collapse;
-  margin: 0 auto;
-  width: 90%;
-  max-width: 1000px;
-  border: 2px solid #000;
-  background: #fff;
-}
 
 .client-table th, .client-table td {
   border: 1px solid #000;
@@ -48,7 +40,7 @@ button {
   background: #fff;
   padding: 0.5rem 1.2rem;
   cursor: pointer;
-  transition: background 0.2s, color 0.2s;
+  transition: background-color 0.2s, color 0.2s;
 }
 
 button:disabled {
@@ -95,4 +87,20 @@ label {
   text-align: center;
   width: 100%;
   margin-bottom: 2rem;
+}
+
+.clients-table-container {
+  max-height: 360px;
+  width: 70%;
+  overflow-y: auto;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.client-table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 2px solid #000;
+  background: #fff;
 }
