--- a/frontend/src/pages/Product.css
+++ b/frontend/src/pages/Product.css
@@ -1,17 +1,16 @@
 .product {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 2rem 0;
 }
 
 .product h1 {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   width: 100%;
 }
 
 .product-table-container {
-  max-height: 390px;
+  max-height: 350px;
   overflow-y: auto;
   margin-bottom: 1rem;
   width: 100%;
@@ -84,7 +83,8 @@
 }
 
 .modal input[type="text"],
-.modal input[type="number"] {
+.modal input[type="number"],
+.modal input[type="email"] {
   width: 100%;
   margin-bottom: 1rem;
   padding: 0.5rem;
